# mannequin_godot_demo

./: .gitignore  .gitmodules  Readme.md  _redirects  index.html
assets/: 404-BAQbeg-d.css  Mermaid.vue_vue_type_script_setup_true_lang-yaHy3lJ4.js  NoteDisplay-Bk2Sgy1F.css  PartialDerivatives-CZKmnGwh.js  SlideWrapper-WsgNxHnn.css  architectureDiagram-MNG2EZ36-XDylcE-u.js  blockDiagram-PUQND6SK-BbOY_nDI.js  c4Diagram-2PWUBN57-CrO0uqRX.js  chunk-COUQ6RZ3-B-YzfIBW.js  chunk-EOAU2GW5-IS_KMCuV.js  chunk-EW7OGKD5-B0uYO54a.js  chunk-IHYUGLNO-DZuWYA3f.js  chunk-K2ZEYYM2-CHmIOB5u.js  chunk-PBUFIUIK-CIx7YBOn.js  chunk-QBDURH3N-BtG0nFKI.js  chunk-RLOJ5SS7-Mu1IWJbA.js  chunk-SCLVSU6P-DfqlJHZR.js  chunk-TGZYFRKZ-2h3cH8ay.js  chunk-YJGJQOYZ-Ci_9_yWL.js  classDiagram-v2-RIMUC4ZU-C-NI0VrM.js  dagre-F4VEW2FP-miTQbZSm.js  diagram-DALDLW2F-B1pUJ_SZ.js  diagram-LL7EM5HP-CTdjKk0K.js  entry-Cn7HfDuL.css  erDiagram-DRJBTHUR-DCG2xGUl.js  flowDiagram-ZTNHLIZW-jFCfh9Ue.js  ganttDiagram-ZFCCRYH7-CGkXmTgh.js  gitGraphDiagram-2G5BN5WE-B_It54Fu.js  godot-ferris-DC32Fci4.js  index-B10M_UZ5.css  index-B92nqP48.js  infoDiagram-MUHAVQ4D-DG1PIvyC.js  journeyDiagram-O5AGF4JI-DvNvLuL5.js  kanban-definition-MJRQJSEA-enIz6gYb.js  katex-5N2NCDMP-COUap9M1.js  md-B5E-vn4w.js  md-B7Q0owZz.js  md-BGEgCaUe.js  md-BJvVeaLP.js  md-BLeAgnfx.js  (+32 more)
assets/modules/: shiki-DdGC1ozD.js  (+2 more)
blender/: schunk.blend
godot/: biomechanics.png.import  export_presets.cfg  mannequin.gdextension  mannequin.gdextension.uid  openxr_action_map.tres  project.godot
rust/: Cargo.toml
rust/src/: lib.rs  mannequin.rs  secondary.rs
(+38 files in other folders)
